@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.tadukoo.parsing</groupId>
 	<artifactId>TadukooParsingParent</artifactId>
-	<version>0.1-Alpha</version>
+	<version>0.2.2-Alpha</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 	<description>Various libraries for parsing different formats</description>
@@ -33,14 +33,16 @@
 	</scm>
 	<modules>
 		<module>TadukooJSON</module>
+		<module>TadukooJava</module>
+		<module>TadukooFileFormat</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
 		<!-- Java and JUnit Versions -->
-		<java.version>14</java.version>
-		<junit.jupiter.version>5.5.2</junit.jupiter.version>
-		<junit.platform.version>1.5.2</junit.platform.version>
+		<java.version>15</java.version>
+		<junit.jupiter.version>5.7.0</junit.jupiter.version>
+		<junit.platform.version>1.7.0</junit.platform.version>
 		
 		<!-- JUnit Information -->
 		<junit.jupiter.groupID>org.junit.jupiter</junit.jupiter.groupID>
@@ -62,37 +64,17 @@
 		<directory.test-resource>junit-resource</directory.test-resource>
 		<directory.eclipse.annotationprocessing>.apt_generated</directory.eclipse.annotationprocessing>
 		
-		<!-- TadukooUtil Group ID -->
-		<tadukoo.util.groupID>com.github.tadukoo.util</tadukoo.util.groupID>
-		<tadukoo.util.version>0.2-Alpha</tadukoo.util.version>
-		
-		<!-- TadukooLang Info -->
-		<tadukoo.util.lang.artifactID>TadukooLang</tadukoo.util.lang.artifactID>
+		<!-- Tadukoo Util Versions -->
+		<tadukoo.util.version>0.2.2-Alpha</tadukoo.util.version>
 		<tadukoo.util.lang.version>${tadukoo.util.version}</tadukoo.util.lang.version>
-		
-		<!-- TadukooAnnotationProcessor Info -->
-		<tadukoo.util.annotationprocessor.artifactID>TadukooAnnotationProcessor</tadukoo.util.annotationprocessor.artifactID>
-		<tadukoo.util.annotationprocessor.version>${tadukoo.util.version}</tadukoo.util.annotationprocessor.version>
-		
-		<!-- TadukooDatabase Info -->
-		<tadukoo.util.database.artifactID>TadukooDatabase</tadukoo.util.database.artifactID>
-		<tadukoo.util.database.version>${tadukoo.util.version}</tadukoo.util.database.version>
-		
-		<!-- TadukooFileFormat Info -->
-		<tadukoo.util.fileformat.artifactID>TadukooFileFormat</tadukoo.util.fileformat.artifactID>
-		<tadukoo.util.fileformat.version>${tadukoo.util.version}</tadukoo.util.fileformat.version>
-		
-		<!-- TadukooLookAndFeel Info -->
-		<tadukoo.util.lookandfeel.artifactID>TadukooLookAndFeel</tadukoo.util.lookandfeel.artifactID>
-		<tadukoo.util.lookandfeel.version>${tadukoo.util.version}</tadukoo.util.lookandfeel.version>
-		
-		<!-- TadukooUtil Info -->
-		<tadukoo.util.util.artifactID>TadukooUtil</tadukoo.util.util.artifactID>
+		<tadukoo.util.functions.version>${tadukoo.util.version}</tadukoo.util.functions.version>
 		<tadukoo.util.util.version>${tadukoo.util.version}</tadukoo.util.util.version>
 		
-		<!-- TadukooView Info -->
-		<tadukoo.util.view.artifactID>TadukooView</tadukoo.util.view.artifactID>
-		<tadukoo.util.view.version>${tadukoo.util.version}</tadukoo.util.view.version>
+		<!-- TadukooUtil Info -->
+		<tadukoo.util.groupID>com.github.tadukoo.util</tadukoo.util.groupID>
+		<tadukoo.util.lang.artifactID>TadukooLang</tadukoo.util.lang.artifactID>
+		<tadukoo.util.functions.artifactID>TadukooFunctions</tadukoo.util.functions.artifactID>
+		<tadukoo.util.util.artifactID>TadukooUtil</tadukoo.util.util.artifactID>
 	</properties>
 	<distributionManagement>
 		<snapshotRepository>
@@ -112,41 +94,17 @@
 				<artifactId>${tadukoo.util.lang.artifactID}</artifactId>
 				<version>${tadukoo.util.lang.version}</version>
 			</dependency>
-			<!-- TadukooAnnotationProcessor Dependency -->
+			<!-- TadukooFunctions Dependency -->
 			<dependency>
 				<groupId>${tadukoo.util.groupID}</groupId>
-				<artifactId>${tadukoo.util.annotationprocessor.artifactID}</artifactId>
-				<version>${tadukoo.util.annotationprocessor.version}</version>
-			</dependency>
-			<!-- TadukooDatabase Dependency -->
-			<dependency>
-				<groupId>${tadukoo.util.groupID}</groupId>
-				<artifactId>${tadukoo.util.database.artifactID}</artifactId>
-				<version>${tadukoo.util.database.version}</version>
-			</dependency>
-			<!-- TadukooFileFormat Dependency -->
-			<dependency>
-				<groupId>${tadukoo.util.groupID}</groupId>
-				<artifactId>${tadukoo.util.fileformat.artifactID}</artifactId>
-				<version>${tadukoo.util.fileformat.version}</version>
-			</dependency>
-			<!-- TadukooLookAndFeel Dependency -->
-			<dependency>
-				<groupId>${tadukoo.util.groupID}</groupId>
-				<artifactId>${tadukoo.util.lookandfeel.artifactID}</artifactId>
-				<version>${tadukoo.util.lookandfeel.version}</version>
+				<artifactId>${tadukoo.util.functions.artifactID}</artifactId>
+				<version>${tadukoo.util.functions.version}</version>
 			</dependency>
 			<!-- TadukooUtil Dependency -->
 			<dependency>
 				<groupId>${tadukoo.util.groupID}</groupId>
 				<artifactId>${tadukoo.util.util.artifactID}</artifactId>
 				<version>${tadukoo.util.util.version}</version>
-			</dependency>
-			<!-- TadukooView Dependency -->
-			<dependency>
-				<groupId>${tadukoo.util.groupID}</groupId>
-				<artifactId>${tadukoo.util.view.artifactID}</artifactId>
-				<version>${tadukoo.util.view.version}</version>
 			</dependency>
 			<!-- JUnit Dependencies -->
 			<dependency>
@@ -168,23 +126,19 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>${maven.compiler.version}</version>
 					<configuration>
 						<release>${java.version}</release>
-						<compilerArgs>--enable-preview</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M4</version>
-					<configuration>
-						<argLine>@{argLine} --enable-preview</argLine>
-					</configuration>
+					<version>${maven.surefire.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.5</version>
+					<version>0.8.6</version>
 					<executions>
 						<execution>
 							<goals>
@@ -193,7 +147,7 @@
 						</execution>
 						<execution>
 							<id>report</id>
-							<phase>prepare-package</phase>
+							<phase>test</phase>
 							<goals>
 								<goal>report</goal>
 							</goals>
@@ -230,9 +184,6 @@
 					<version>${maven.javadoc.version}</version>
 					<configuration>
 						<release>${java.version}</release>
-						<additionalOptions>
-							<additionalOption>--enable-preview</additionalOption>
-						</additionalOptions>
 					</configuration>
 					<executions>
 						<execution>
